--- a/Bayes-Lund2023_presentation/Bayes-Lund2023_presentation.qmd
+++ b/Bayes-Lund2023_presentation/Bayes-Lund2023_presentation.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Identifying Data Requirements using Bayesian Decision Analysis"
-subtitle: "Bayes@Lund Conference"
+subtitle: "Bayes@Lund"
 execute: 
   echo: true
   message: false
@@ -11,22 +11,41 @@ format:
     chalkboard: false
     preview-links: true
     theme: [simple, custom.scss]
-    # logo: figures/ATI_logo.png
     smaller: true
     scrollable: true
     transition: slide
-    # institute: "<br>The Alan Turing Institute"
+    institute: "The Alan Turing Institute <br> CSML Research Group, Civil Engineering, University of Cambridge"
     author: "Domenic Di Francesco, PhD, CEng (MIMechE)"
     code-fold: true
-    date: "January 2023"
+    date: "23 January 2023"
+    date-format: full
 ---
 
 ## Uncertainty and Decisions
+
+:::{.notes}
+need for decisions is why we are asked to develop models
+:::
 
 ```{r}
 #| echo: false
 library(tidyverse); setwd("~/Github/Bayes-Lund2023/Bayes-Lund2023_presentation")
 ```
+
+::: {.incremental}
+ - *"Many if not most statistical analyses are performed for the ultimate goal of decision making."*
+ <br> Andrew Gelman et. al, [Bayesian Data Analysis](https://doi.org/10.1201/b16018). <br>
+
+ - *"Bayesian analysis and decision theory go rather naturally together, partly because of their common goal of utilizing non-experimental sources of information, and partly because of deep theoretical ties."* 
+ <br> Prof. James Berger, [Statistical Decision Theory and Bayesian Analysis](https://doi.org/10.1007/978-1-4757-4286-2). <br>
+
+ - *"It is important that all problems of inference be visualized as problems of decision."*
+<br> Prof. Ian Jordaan, [Decisions Under Uncertainty](https://doi.org/10.1017/CBO9780511804861).<br>
+
+ - *"It (statistics) is seldom really appreciated for what it can be used for, namely as a basis for assessing information and organising the process of acquiring knowledge in pursuit of supporting decision making."* 
+ <br> Prof. Michael Faber, [Statistics and Probability Theory: In Pursuit of Engineering Decision Support](https://doi.org/10.1007/978-94-007-4056-3). <br>
+
+:::
 
 ## Uncertainty and Decisions
 
@@ -38,60 +57,86 @@ library(tidyverse); setwd("~/Github/Bayes-Lund2023/Bayes-Lund2023_presentation")
 ### Influence diagrams
 
 ![Example influence diagram](Figures/influence_diagram.png)
+
+Select action $a^{*}$ associated with the highest expected utility:
+
+```{=tex}
+\begin{equation}
+a^{*} = \arg \max_{a \in A} \mathop{\mathbb{E}}_{\theta \sim \pi(\theta)} \big[ u(a, \theta) \big]
+\end{equation}
+```
+
+### Value of Information
+
+:::{.notes}
+ - multi-stage, or preposterior decision making
+ - ...we don't yet have the data
 :::
 
-## Uncertainty and Decisions
+![Example influence diagram](Figures/VoI.png)
 
-<!-- ::: {.incremental} -->
+::: {style="text-align: center"}
 
-<!-- ::: -->
+*How* and *to what extent* will this data facilitate improved decision making?
 
-*"Bayesian analysis and decision theory go rather naturally together, partly because of their common goal of utilizing non-experimental sources of information, and partly because of deep theoretical ties."* <br> <br> Prof. James Berger, [Statistical Decision Theory and Bayesian Analysis](https://doi.org/10.1007/978-1-4757-4286-2).
+```{=tex}
+\begin{equation}
+VoI(e_{i}) = \mathop{\mathbb{E}}_{\theta \sim \pi(\theta), \\z \sim f(z \mid \theta)} \big[ u(e_{i}, z, a^{*}, \pi(\theta \mid z) \big] - \mathop{\mathbb{E}}_{\theta \sim \pi(\theta)} \big[ u( a^{*}, \pi(\theta)) \big]
+\end{equation}
+```
 
-*"It is important that all problems of inference be visualized as problems of decision."* <br> <br> Prof. Ian Jordaan, [Decisions Under Uncertainty](https://doi.org/10.1017/CBO9780511804861).
+:::
 
-Statistical decision theory tells us to quantify expected utility (averaging over uncertainty) to rank decision alternatives. We can then identify expected optimal actions, which can be formally described in Equation??
-
-After describing a decision making under uncertainty problem mathematically, it can be solved as an optimisation, where we can benefit from lots of existing software.
-
-## Decision Making under Uncertainty
-
-.tex \$\$ a\^{\*} = \arg \max\_{a \in A} E \big[ u(a, \theta) \big] \\
-
-E \big[ u(a, \theta) \big] = \int\_{\theta} u(a, \theta) d \theta \$\$
-
-## Decision Making under Uncertainty
-
-::: panel-tabset
-### Probability
-
-Uncertainty quantification: benefits of using probability
-
-### Utility
-
-Generally monetary costs
-
-..but a few notes on *utility* - Cost vs. Utility for (a) wholesome engineering company, (b) evil megacorp -
 :::
 
 ## Examples
 
+:::{.notes}
+influence diagram software
+:::
+
 ```{julia}
+# For working with data
+using CSV, DataFrames, DataFramesMeta, RCall
+
 # For describing probabilistic models
-using Distributions, Turing, Random, LatinHypercubeSampling
+using Distributions, Random, LatinHypercubeSampling, StanSample, MCMCChains
 
 # For describing and solving decision problem
 using JuMP, HiGHS, DecisionProgramming, LinearAlgebra
 
-# For working with data
-using CSV, DataFrames, DataFramesMeta, RCall
+```
+
+```{julia}
+#| echo: false
+#| output: false
+
+set_cmdstan_home!("/Users/ddifrancesco/.cmdstan/cmdstan-2.30.1"); CMDSTAN_HOME
 
 ```
 
 ## Building Ventilation
 
+:::{.notes}
+airborne-cam model
+:::
+
 ::: panel-tabset
-### Influence Diagram
+
+### Problem
+
+Specify the ventilation setting for an office building: 
+
+ - Low
+ - Standard
+ - Well Ventilated
+ - High
+
+Higher ventilation rates decrease the risk of infection from airborne disease, but cost more to run.
+
+[Link to paper](https://doi.org/10.1098/rspa.2020.0584)
+
+### Influence diagram
 
 ![Influence diagram for building ventilation problem](Figures/occupancy.png)
 
@@ -131,7 +176,7 @@ end
 
 ```
 
-### Prior Uncertainty
+### Prior uncertainty
 
 ```{julia}
 #| output: false
@@ -155,7 +200,6 @@ sickness_costs = Dict("Sick_Day" => 115 * 3)
 
 ```{r}
 #| echo: false
-
 ggplot(data = tibble(o = occupancy_samples))+
   geom_histogram(mapping = aes(x = o, y = after_stat(x = density)), 
                  binwidth = 3, col = "black", alpha = 1/3)+
@@ -166,7 +210,7 @@ ggplot(data = tibble(o = occupancy_samples))+
         legend.title = element_blank(), legend.position = "top")
 ```
 
-### Decision Analysis
+### Decision analysis
 
 ```{julia}
 function exp_opt_venting(occupants::Vector{Int64} = occupancy_samples, optimiser = HiGHS.Optimizer)
@@ -251,26 +295,31 @@ function exp_opt_venting(occupants::Vector{Int64} = occupancy_samples, optimiser
     
 end
 
+prior_ventilation_decision = exp_opt_venting()
+
 ```
 :::
 
-
-
 ## Building Ventilation
 
-### Expected Value of Measuring Occupancy
+:::{.notes}
+ - how much should we be willing to pay to measure occupancy?
+ - scales with time...
+ - VoPI
+:::
+
+#### Expected value of measuring occupancy
 
 ```{julia}
 #| output: false
-prior_df = exp_opt_venting()
 
-measure_df = DataFrame()
+measure_occupancy_df = DataFrame()
 for o in occupancy_samples
-    append!(measure_df, exp_opt_venting([o]))
+    append!(measure_occupancy_df, exp_opt_venting([o]))
 end
 
-prior_cost = prior_df.u_opt[1] 
-prepost_cost = mean(measure_df.u_opt)
+prior_cost = prior_ventilation_decision.u_opt[1] 
+prepost_cost = mean(measure_occupancy_df.u_opt)
 
 VoPI = prior_cost - prepost_cost
 ```
@@ -278,34 +327,36 @@ VoPI = prior_cost - prepost_cost
 ```{julia}
 #| echo: false
 #| output: false
-@rput(prior_df); @rput(measure_df)
+@rput(prior_ventilation_decision); @rput(measure_occupancy_df)
 ```
 
 ```{r}
 #| echo: false
-#| fig-cap: "Expected Cost and Optimal Action Associated with each Simulation From a Prospective Measurement of Building Occupancy"
+#| fig-cap: "Expected cost and optimal action associated with each simulation from a prospective measurement of building occupancy"
 
-measure_df$meas <- occupancy_samples
+measure_occupancy_df$meas <- occupancy_samples
+measure_occupancy_df$a_opt <- gsub(pattern = "Well_Ventilated", replacement = "Well \nVentilated", x = measure_occupancy_df$a_opt)
 
-arrow_df <- tibble(x = prior_df$u_opt,
-                   xend = measure_df$u_opt |> mean(),
+arrow_df <- tibble(xend = prior_ventilation_decision$u_opt,
+                   x = measure_occupancy_df$u_opt |> mean(),
                    y = 4, yend = 4)
 
-ggplot(data = bind_rows(measure_df, tibble(a_opt = "High", u_opt = NA)) |>
-         mutate(a_opt = factor(x = a_opt, levels = c("Low", "Standard", "Well_Ventilated", "High"))),
+ggplot(data = bind_rows(measure_occupancy_df, tibble(a_opt = "High", u_opt = NA)) |>
+         mutate(a_opt = factor(x = a_opt, levels = c("Low", "Standard", "Well \nVentilated", "High"))),
                         mapping = aes(x = u_opt, y = a_opt))+
   geom_jitter(shape = 21, alpha = 1/2, height = 1/3, mapping = aes(fill = meas))+
-  geom_vline(mapping = aes(xintercept = prior_df$u_opt, 
+  geom_vline(mapping = aes(xintercept = prior_ventilation_decision$u_opt, 
                            lty = "Expected Cost Without Measuring Occupancy"), alpha = 1/2) +
-  geom_vline(mapping = aes(xintercept = measure_df$u_opt |> mean(), 
+  geom_vline(mapping = aes(xintercept = measure_occupancy_df$u_opt |> mean(), 
                            lty = "Expected Cost Measuring Occupancy"), alpha = 1/2)+
   geom_segment(data = arrow_df,
                mapping = aes(x = x, xend = xend, y = y, yend = yend, col = "EVoPI"), 
-               arrow = arrow(length = unit(0.25, "cm"), ends = "last", type = "closed"))+
+               arrow = arrow(length = unit(0.25, "cm"), ends = "first", type = "closed"))+
   scale_color_manual(values = c("midnightblue"))+
   scale_fill_viridis_c()+
   labs(y = "Expected Optimal Action", fill = "Measured Occupancy", lty = "", col = "")+
-  scale_x_continuous(name = "Expected Cost, $", limits = c(0, 125))+
+    scale_linetype_manual(values = c(2, 1))+
+  scale_x_continuous(name = "Expected Cost", limits = c(0, 125), labels = scales::dollar_format(), breaks = scales::pretty_breaks())+
   ggthemes::theme_base(base_size = 14, base_family = "Atkinson Hyperlegible")+
   theme(legend.position = 'top', legend.title = element_text(size = 10), axis.text.y = element_text(angle = 90, hjust = 0.5), 
         plot.background = element_rect(colour = NA))+
@@ -313,22 +364,285 @@ ggplot(data = bind_rows(measure_df, tibble(a_opt = "High", u_opt = NA)) |>
          fill = guide_colorbar(title.position = 'top', barwidth = 10, barheight = 1/2, order = 3))
 ```
 
-## Inspecting for Damage
+## Inspecting for Corrosion
 
-Opportunity to collect data (perform experiments) *before* making decision
+:::{.notes}
+ - importance of prior
+ - imperfect information => Bayesian updating
+:::
 
-Concept: to what extent, is data expected to facilitate improved risk management?
+::: {.panel-tabset}
 
-## Summary
+### Problem
 
--   Methods are generic - mention other applications - think about the decision problems that are driving your modelling
--   Relating models to decisions =\> consistent and coherent results
--   ...also allows for powerful analysis, e.g. VoI
--   Analogous to prior predictive sampling - no intuition for multivariate distribution of parameters, but there is for outcome space. Here there may be no intuition for whether data is worth paying for, but there is for current state of knowledge and possible outcomes. The expected value of data follows by the logic of statistical decision analysis. Additional benefits include having a documented, quantitative workflow.
--  Further work: 
+Identify a repair plan for $10$ locations of corrosion damage:
+
+```{=tex}
+\begin{equation}
+CGR = \dfrac{d_{i2} - d_{i1}}{T_{i2} - T_{i1}}
+\end{equation}
+```
+
+ - $2$ inspections have been completed
+ - Inspection $2$ was incomplete
+
+ - Should the inspection team return to location $4$?
+ 
+ [Link to paper](https://doi.org/10.1017/dce.2021.18)
+
+### Influence diagram
+
+![Influnce diagram for inspecting for corrosion](Figures/corrosion.png)
+
+### Model
+
+```{julia}
+#| echo: false
+#| output: false
+
+inspection_df = CSV.read("data_files/inspection_data.csv", DataFrame)
+years = unique(inspection_df.t); insps = unique(inspection_df.inspection); locations = unique(inspection_df.location)
+
+function lnorm_params(μ::Float64, σ::Float64)
+    sdlog = √(log(1 + σ^2 / μ^2))
+    meanlog = log(μ) - 0.5 * sdlog^2
+    return Dict("sdlog" => sdlog, "meanlog" => meanlog)
+end
+
+prior_depth = lnorm_params(10.0, 6.0)
+
+model_text = open("data_files/corr_fp_md.stan") do file
+    read(file, String)
+end
+
+model_data = Dict(
+    "N" => nrow(inspection_df),
+  "n_A" => unique(inspection_df.anomaly_id) |> x -> length(x),
+  "n_M" => sum(inspection_df.missing),
+  "ID" => inspection_df.anomaly_id,
+  "depth_i1" => inspection_df |> x -> @rsubset(x, :t == years[1]) |> x -> x.depth_mm,
+  "depth_i2" => inspection_df |> x -> @rsubset(x, :t == years[2]) |> x -> x.depth_mm,
+  "error_i1" => inspection_df |> x -> @rsubset(x, :t == years[1]) |> x -> x.sizing_uncertainty,
+  "error_i2" => inspection_df |> x -> @rsubset(x, :t == years[2]) |> x -> x.sizing_uncertainty,
+  "d_years" => maximum(years) - minimum(years),
+  "ex_1" => inspection_df |> x -> @rsubset(x, :t == years[1]) |> x -> x.missing,
+  "ex_2" => inspection_df |> x -> @rsubset(x, :t == years[2]) |> x -> x.missing,
+  "mu_mu_beta" => 1, "sigma_mu_beta" => 1, "rate_sigma_beta" => 1,
+  "mu_depth_imp" => prior_depth["meanlog"],
+  "sigma_depth_imp" => prior_depth["sdlog"]
+)
+
+tmpdir = pwd() * "/tmp"; model = SampleModel("corrosion_model", model_text, tmpdir)
+
+n_chains = 4; n_warmup = 2_000; n_draws = Int(1_000 / n_chains)
+
+rc = model |>
+     x -> stan_sample(x; data = model_data, save_warmup = false, 
+     num_warmups = n_warmup, num_samples = n_draws, thin = 1, delta = 0.85)
+
+if success(rc)
+    samples_df = read_samples(model, :mcmcchains) |> x -> DataFrame(x) |> x -> DataFrames.stack(x)
+    diags_df = read_summary(model) |> x -> DataFrame(x)
+end
+
+depth_df = samples_df |>
+    x -> @rsubset(x, occursin("depth_true", :variable)) |>
+    x -> @rtransform(x, :insp = occursin("i1", :variable) ? "Inspection 1" : "Inspection 2") |>
+    x -> @rtransform(x, :anomaly = split(:variable, ".") |> x -> "Anomaly " * x[2])
+
+@rput(samples_df); @rput(depth_df)
+```
+
+```stan
+functions{
+  real log_norm_sigma(real norm_mu, real norm_sigma){ 
+    return log(1 + (norm_sigma^2 / norm_mu^2)); 
+  }
+  
+  real log_norm_mu(real norm_mu, real norm_sigma){
+    return log(norm_mu) - 0.5 * log_norm_sigma(norm_mu, norm_sigma)^2;
+  }
+}
+
+data {
+  int <lower = 1> N; // Number of data points
+  int <lower = 1> n_A; // Number of anomalies
+  int <lower = 0> n_M; // Number of anomalies missed
+
+  int <lower = 1> ID [N]; // Defect identifier
+
+  vector [n_A] depth_i1; // Measured corrosion depth
+  vector [n_A] depth_i2; // Measured corrosion depth
+  vector <lower = 0> [n_A] error_i1; // Measurement error parameter
+  vector <lower = 0> [n_A] error_i2; // Measurement error parameter
+
+  real d_years; // Time of measurement
+  
+  real mu_mu_beta; // Prior corrosion growth rate parameter
+  real <lower = 0> sigma_mu_beta; // Prior corrosion growth rate parameter
+  real <lower = 0> rate_sigma_beta; // Prior corrosion growth rate parameter
+  
+  real mu_depth_imp;  // Prior on missing data
+  real <lower = 0> sigma_depth_imp;  // Prior on missing data
+}
+
+parameters {
+  real mu_beta;
+  real <lower = 0> sigma_beta;
+  
+  vector <lower = 0> [n_A] depth_true_i1;
+  vector <lower = 0> [n_A] delta_depth;
+}
+
+transformed parameters {
+  vector [n_A] depth_true_i2 = depth_true_i1 + delta_depth;
+  vector [n_A] growth; // Growth rate depth of corrosion
+  
+  for (i in 1:n_A){  
+    growth[i] = (depth_true_i2[i] - depth_true_i1[i]) / (d_years);
+  }
+}
+
+model {
+  // Model
+  for (n in 1:n_A) {
+    if (ex_1[n] == 0){
+      depth_i1[n] ~ normal(depth_true_i1[n], error_i1[n]);
+    }
+    
+    if (ex_1[n] == 1) {
+      depth_true_i1[n] ~ lognormal(mu_depth_imp, sigma_depth_imp);
+    }
+    
+    if (ex_2[n] == 0){
+      depth_i2[n] ~ normal(depth_true_i2[n], error_i2[n]);
+    }
+    
+    if (ex_2[n] == 1) {
+      depth_true_i2[n] ~ lognormal(mu_depth_imp, sigma_depth_imp);
+    }
+  }
+  growth ~ lognormal(mu_beta, sigma_beta);
+
+  // Priors
+  target += normal_lpdf(mu_beta | mu_mu_beta, sigma_mu_beta);
+  target += exponential_lpdf(sigma_beta | rate_sigma_beta);
+}
+
+generated quantities {
+   real CGR_pp = lognormal_rng(mu_beta, sigma_beta);
+}
+
+```
+
+### Prior uncertainty
+
+```{r}
+#| echo: false
+#| fig-cap: "Estimated extent of corrosion damage for first 4 locations"
+
+depth_df <- depth_df |>
+  mutate(type = case_when(
+    (insp == "Inspection 2" & anomaly == "Anomaly 4") ~ "Imputed",
+    T ~ "Measured"
+  ))
+
+ggplot(data = depth_df |> dplyr::filter(anomaly %in% (depth_df$anomaly |> unique())[1:4]))+
+  geom_density(mapping = aes(x = value, y = after_stat(x = density), alpha = type), 
+               col = "black", fill = "grey")+
+  facet_grid(anomaly ~ insp)+
+  scale_x_continuous(name = "Corrosion depth, mm", breaks = scales::pretty_breaks())+
+  scale_y_continuous(name = "Likelihood", breaks = scales::pretty_breaks())+
+  ggthemes::theme_base(base_size = 14, base_family = "Atkinson Hyperlegible")+
+  theme(legend.position = 'top', legend.title = element_blank(), 
+        plot.background = element_rect(colour = NA))
+
+```
+
+:::
+
+## Inspecting for Corrosion
+
+#### Expected value of completing inspection
+
+::: panel-tabset
+
+### Prior decision analysis
+```{r}
+#| echo: false
+
+VoInsp_prior <- read_csv("data_files/VoInsp_prior.csv", )
+
+kableExtra::kable(VoInsp_prior)
+```
+
+### Preposterior decision analysis
+
+```{r}
+#| echo: false
+
+VoInsp <- read_csv("data_files/VoInsp.csv")
+
+arrow_df <- tibble(xend = sum(VoInsp_prior$Cost),
+                   x = VoInsp$cost |> mean(),
+                   y = 2e-4, yend = 2e-4)
+
+VoI <- sum(VoInsp_prior$Cost) -mean(VoInsp$cost)
+
+ggplot(data = VoInsp) +
+  geom_histogram(mapping = aes(x = cost, y = after_stat(x = density)),
+                 col = "black", fill = "grey")+
+  geom_vline(mapping = aes(xintercept = mean(VoInsp$cost), lty = "Expected cost following \ninspection of Anomaly 4"), alpha = 2/3)+
+  geom_vline(mapping = aes(xintercept = sum(VoInsp_prior$Cost), lty = "Expected cost without \ninspecting Anomaly 4"), alpha = 2/3)+
+  geom_segment(data = arrow_df,
+               mapping = aes(x = x, xend = xend, y = y, yend = yend, col = "Expected Value \nof Inspection"), 
+               arrow = arrow(length = unit(0.25, "cm"), ends = "first", type = "closed"))+
+  geom_text(data = arrow_df, mapping = aes(x = mean(c(x, xend)), y = y + 2e-5, label = paste("$", round(VoI, digits = 0))), family = "Atkinson Hyperlegible", size = 3.75)+
+  scale_color_manual(values = "forestgreen")+
+  scale_linetype_manual(values = c(2, 1))+
+  scale_x_continuous(name = "Cost", labels = scales::dollar_format(), breaks = scales::pretty_breaks())+
+  scale_y_continuous(name = "Likelihood")+
+  ggthemes::theme_base(base_size = 14, base_family = "Atkinson Hyperlegible")+
+  theme(legend.position = 'top', legend.title = element_blank(), 
+        plot.background = element_rect(colour = NA))
+
+```
+
+:::
+
+## Some concluding thoughts
+
+- Explictly relate Bayesian models to underlying decisions:
+    - Consistent and coherent results on an intereptable scale
+    - Quantify expected value of collecting data
+
+- Challenges:
+    - Defining problem, e.g. identifying sources of value.
+    - Computation/combinatorics...
+
+- Further work...
+
+:::{.notes}
+analogy to priot predictive sampling
+:::
 
 ## Thank you for your attention!
 
-<span style="font-size: 3em;">
-<i class="fa-brands fa-twitter"></i>
-</span>
+::: {style="text-align: center"}
+
+<br>
+
+{{< fa envelope size=2x >}}
+[ddifrancesco@turing.ac.uk](ddifrancesco@turing.ac.uk)
+
+<br>
+
+{{< fa brands twitter size=2x >}} 
+[@DomenicDF](https://twitter.com/Domenic_DF)
+
+<br>
+
+{{< fa brands github size=2x >}}
+[@DomDF](https://github.com/DomDF)
+
+:::
